[package]
name = "sheet-gen"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
csv = "1.3.0"
eframe = "0.27.2"
egui = "0.27.2"
glob = "0.3.1"
is-url = "1.0.4"
rss = "2.0.7"
ureq = "2.9.6"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui_extras = { version = "0.27.2", features = ["default", "image"] }